--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
  				<target>${java-version}</target>
  				 <skipTests>true</skipTests>
   			</configuration>
+  			 
   		</plugin>
+  		 <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+          	<artifactId>maven-surefire-plugin</artifactId>
+          	<version>2.19.1</version>
+        </plugin>
   	</plugins>
   </build>
 
@@ -83,6 +89,10 @@
 	    <version>3.0.1</version>
 	    <scope>provided</scope>
 	</dependency>
+	
+	
+	
+	
   </dependencies>
   
   
